# cogprime

./: .gitignore  .pre-commit-config.yaml  ASSESSMENT_SUMMARY_README.md  CONTRIBUTING.md  CREATE_ISSUES.md  CogPrime - An Integrative Architecture for Embodied Artificial General Intelligence.md  EXECUTIVE_SUMMARY_AND_RECOMMENDATIONS.md  GITHUB_ACTIONS_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_TRACKING.md  IMPLEMENTATION_SUMMARY.md  ISSUE_CREATION_SUMMARY.md  ISSUE_GENERATION_SUMMARY.md  Implement Hardware-Optimized Data-Free Quantization-Aware Training (QAT) Framework for OpenCog-Aligned Large Language Models by Copilot · Pull Request #2 · HyperCogWizard_cogml.md  LICENSE  OPTIMIZATION_REPORT.md  OpenCog Hyperon - A Framework for AGI at the Human Level and Beyond.md  P9ML-README.md  PATCH_INSTRUCTIONS.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_ENHANCED_CAPABILITIES_SUMMARY.md  README.md  RELEVANCE_REALIZATION_IMPLEMENTATION_SUMMARY.md  RELEVANCE_REALIZATION_SECURITY_SUMMARY.md  ROADMAP_ISSUES_COMPLETION_STATUS.md  RROS_INTEGRATION_GUIDE.md  RROS_KERNEL_SUMMARY.md  RUNNING_ISSUE_CREATION.md  Relevance Realization - Awakening from the Meaning Crisis - Notes and Transcriptions.md  SCRIPT_VALIDATION_REPORT.md  SECRET_FEATURE_UNVEILED.md  Sessions · [WIP] 🧠 Master Implementation Task_ NanoBrain Cognitive Architecture Visualization System.md  SiliconSage-v0.md  SiliconSage-v3.md  SiliconSage-v4.md  SiliconSage-v5.md  VERVAEKE_4E_INTEGRATION_SUMMARY.md  VISUAL_COMPLETION_DASHBOARD.md  agi_visualization_dashboard.html  dashboard_architecture.mmd  (+12 more)
rros_kernel/: CMakeLists.txt  CROSS_DOMAIN_IMPLEMENTATION_SUMMARY.md  CROSS_DOMAIN_INTEGRATION_README.md  GGML_OPTIMIZATION_SUMMARY.md  HISTORICAL_CONTEXT_IMPLEMENTATION_SUMMARY.md  README.md  (+26 more)
(+436 files in other folders)
